--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "http-errors": "^1.8.0",
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
